--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -12,9 +12,8 @@ A class that performs renormalization group evolution in the context of the S\+M
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{classRGESolver_a45669aa780325da0b1e866ba229b277f}\label{classRGESolver_a45669aa780325da0b1e866ba229b277f}} 
 \mbox{\hyperlink{classRGESolver_a45669aa780325da0b1e866ba229b277f}{R\+G\+E\+Solver}} ()
-\begin{DoxyCompactList}\small\item\em The default constructor. It initializes to 0 all the S\+M\+E\+FT coefficients. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em The default constructor. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRGESolver_ab1edd7795c6a3dfd0ee1a13a0ae25361}\label{classRGESolver_ab1edd7795c6a3dfd0ee1a13a0ae25361}} 
 \mbox{\hyperlink{classRGESolver_ab1edd7795c6a3dfd0ee1a13a0ae25361}{$\sim$\+R\+G\+E\+Solver}} ()
 \begin{DoxyCompactList}\small\item\em The default destructor. \end{DoxyCompactList}\end{DoxyCompactItemize}
@@ -40,11 +39,11 @@ void \mbox{\hyperlink{classRGESolver_a82723bc1077713dea8cafa5319298a2e}{Setepsab
 void \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} (std\+::string method, double muI, double muF)
 \begin{DoxyCompactList}\small\item\em Performs the R\+GE evolution. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a300d0d8643d30cdb49e0df0294793ba2}{Evolve\+To\+Basis}} (std\+::string method, double muI, double muF, std\+::string basis)
-\begin{DoxyCompactList}\small\item\em Performs the R\+GE evolution and performs the back rotation on the coefficients with flavour indices. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Performs the R\+GE evolution and the back rotation on the coefficients with flavour indices. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_af4ed89d1098aa91112cf9e5a39dd8e7f}{Generate\+S\+M\+Initial\+Conditions}} (double mu, std\+::string basis, std\+::string method)
-\begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. At such scale, the C\+KM matrix is computed. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. Default low-\/energy input is used. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_ab228238c79a43b8d3dbb3d220beea73d}{Generate\+S\+M\+Initial\+Conditions}} (double mu\+In, double mu\+Fin, std\+::string basis, std\+::string method, double g1in, double g2in, double g3in, double lambdain, double mh2in, double Muin\mbox{[}3\mbox{]}, double Mdin\mbox{[}3\mbox{]}, double Mein\mbox{[}3\mbox{]}, double s12in, double s13in, double s23in, double deltain)
-\begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. User-\/defined low energy input is used. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_a7c0c4303beb14f728a70542c8583b3a7}{Evolve\+S\+M\+Only}} (std\+::string method, double muI, double muF)
 \begin{DoxyCompactList}\small\item\em Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}}, but only for the SM parameters. The user should use this method instead of \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} when interested in pure SM running. Using this function is the same of using \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolve}} with all the S\+M\+E\+FT coefficients set to 0, but it is faster since it does compute only the evolution for the SM parameters. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \end{Indent}
@@ -83,14 +82,14 @@ void \mbox{\hyperlink{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}{Save\+Ou
 \doxysubsection{Detailed Description}
 A class that performs renormalization group evolution in the context of the S\+M\+E\+FT. 
 
-The class solves the Renormalization Group Equations (R\+G\+Es) both numerically and in the leading-\/log approximation. Only operators up to dimension six that preserve lepton and baryon numbers are considered. The operator basis is the Warsaw basis, defined in \href{https://arxiv.org/abs/1008.4884}{\texttt{ https\+://arxiv.\+org/abs/1008.\+4884}}. The class splits real and imaginary part of each complex parameter. ~\newline
+The class solves the Renormalization Group Equations (R\+G\+Es) both numerically and in the leading-\/log approximation. Only operators up to dimension six that preserve lepton and baryon numbers are considered. The operator basis is the Warsaw basis, defined in \href{https://arxiv.org/abs/1008.4884}{\texttt{ https\+://arxiv.\+org/abs/1008.\+4884}}. {\ttfamily \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}}} splits real and imaginary part of each complex parameter. ~\newline
  ~\newline
  The numerical integration is performed with an adaptive step-\/size routine (the explicit embedded Runge-\/\+Kutta-\/\+Fehlberg method), using the tools in the G\+NU Scientific Library. See \href{https://www.gnu.org/software/gsl/doc/html/ode-initval.html}{\texttt{ https\+://www.\+gnu.\+org/software/gsl/doc/html/ode-\/initval.\+html}} for all the details. ~\newline
-The accuracy level of the numerical integration can be tuned selecting the parameters $\epsilon_{rel}, \epsilon_{abs}$ and the integration step using the dedicated setter functions. ~\newline
+The accuracy level of the numerical integration can be tuned selecting the parameters $\epsilon_{rel} and \epsilon_{abs}$ using the dedicated setter functions. ~\newline
  ~\newline
  All the S\+M\+E\+FT coefficients are set using the \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} methods and accessed with the \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient}} methods. There exist three different signatures for each method, depending on the number of flavour indices of the parameter (0,2,4). ~\newline
  These two routines must be used also for the SM parameters $g_1,g_2,g_3,\lambda,m_h^2,$ $\mathrm{Re}(\mathcal{Y}_u),\mathrm{Im}(\mathcal{Y}_u),$ $\mathrm{Re}(\mathcal{Y}_d),\mathrm{Im}(\mathcal{Y}_d),$ $\mathrm{Re}(\mathcal{Y}_e),\mathrm{Im}(\mathcal{Y}_e)$ (we follow \href{https://arxiv.org/abs/1308.2627}{\texttt{ https\+://arxiv.\+org/abs/1308.\+2627}} for what concerns the conventions in the Higgs\textquotesingle{} sector). ~\newline
- A complete list of the keys that must be used to correctly invoke setter/getter methods are given in tables \doxytablelink{classRGESolver_SM}{SM}, \doxytablelink{classRGESolver_0F}{0F}, \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F}. ~\newline
+ The routines \mbox{\hyperlink{classRGESolver_a1bdc3a8209979b9f4c583b47fc4988d4}{Get\+C\+K\+M\+Angle}}, \mbox{\hyperlink{classRGESolver_a891564c063a942fbd01830b30fa8e6e1}{Get\+C\+K\+M\+Phase}}, \mbox{\hyperlink{classRGESolver_a67f092224a036208d5904da39726ce80}{Get\+C\+K\+M\+Real\+Part}}, \mbox{\hyperlink{classRGESolver_a9a3972af1912ae6ffebc806ffe05daeb}{Get\+C\+K\+M\+Imag\+Part}} should be used when interested in the C\+KM parameters or elements. The usage of this method is recommended after methods such \mbox{\hyperlink{classRGESolver_af4ed89d1098aa91112cf9e5a39dd8e7f}{Generate\+S\+M\+Initial\+Conditions}} or \mbox{\hyperlink{classRGESolver_a300d0d8643d30cdb49e0df0294793ba2}{Evolve\+To\+Basis}} that choose a specific flavour basis (\char`\"{}\+U\+P\char`\"{} or \char`\"{}\+D\+O\+W\+N\char`\"{}), in which cases the C\+KM matrix is updated. A complete list of the keys that must be used to correctly invoke setter/getter methods are given in tables \doxytablelink{classRGESolver_SM}{SM}, \doxytablelink{classRGESolver_0F}{0F}, \doxytablelink{classRGESolver_2F}{2F} and \doxytablelink{classRGESolver_4F}{4F}. ~\newline
 A summary of the operators symmetry classes is given in table \doxytablelink{classRGESolver_Sym}{Sym}. ~\newline
  ~\newline
  We follow \href{http://www.utfit.org/UTfit/Formalism}{\texttt{ http\+://www.\+utfit.\+org/\+U\+Tfit/\+Formalism}} for what concerns the conventions for the C\+KM matrix.
@@ -234,7 +233,7 @@ $\mathrm{Im}(C_{dB})$ &{\ttfamily Cd\+BI} &W\+C1 \\\cline{1-3}
  }}\\\cline{1-3}
 \cellcolor{\tableheadbgcolor}\textbf{ Coefficient }&\cellcolor{\tableheadbgcolor}\textbf{ Name }&\cellcolor{\tableheadbgcolor}\textbf{ Symmetry ~\newline
  }\\\cline{1-3}
-$\mathrm{Re}(C_{Hl1})$ &{\ttfamily C\+Htal1R} &W\+C2R ~\newline
+$\mathrm{Re}(C_{Hl1})$ &{\ttfamily C\+Hl1R} &W\+C2R ~\newline
  \\\cline{1-3}
 $\mathrm{Im}(C_{Hl1})$ &{\ttfamily C\+Hl1I} &W\+C2I \\\cline{1-3}
 $\mathrm{Re}(C_{Hl3})$ &{\ttfamily C\+Hl3R} &W\+C2R \\\cline{1-3}
@@ -438,6 +437,19 @@ $m_{\tau}$ &1.\+776 ~\newline
 \end{longtabu}
 
 
+\doxysubsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{classRGESolver_a45669aa780325da0b1e866ba229b277f}\label{classRGESolver_a45669aa780325da0b1e866ba229b277f}} 
+\index{RGESolver@{RGESolver}!RGESolver@{RGESolver}}
+\index{RGESolver@{RGESolver}!RGESolver@{RGESolver}}
+\doxysubsubsection{\texorpdfstring{RGESolver()}{RGESolver()}}
+{\footnotesize\ttfamily R\+G\+E\+Solver\+::\+R\+G\+E\+Solver (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+The default constructor. 
+
+It initializes to 0 all the S\+M\+E\+FT coefficients. 
+
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}\label{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}} 
 \index{RGESolver@{RGESolver}!Evolve@{Evolve}}
@@ -450,7 +462,7 @@ $m_{\tau}$ &1.\+776 ~\newline
 Performs the R\+GE evolution. 
 
 R\+G\+Es are solved with the chosen method from {\ttfamily muI} to {\ttfamily muF}. Currently, the available methods are \char`\"{}\+Numeric\char`\"{} and \char`\"{}\+Leading-\/\+Log\char`\"{}. ~\newline
- The evolutor takes as initial values the current values of the parameters, set with the \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} functions. After completing the evolution the values of the parameters are updated and are accessible with the Get\+Coefficients function. 
+ The method takes as initial values the current values of the parameters, set with the \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} functions. After completing the evolution the values of the parameters are updated and are accessible with the \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient}} functions. 
 \begin{DoxyParams}{Parameters}
 {\em method} & resolution method \\
 \hline
@@ -487,7 +499,7 @@ Same as \mbox{\hyperlink{classRGESolver_aedc6f80d9a01de09d4ddf1e5b670c690}{Evolv
 
 
 
-Performs the R\+GE evolution and performs the back rotation on the coefficients with flavour indices. 
+Performs the R\+GE evolution and the back rotation on the coefficients with flavour indices. 
 
 After the evolution, the C\+KM matrix is computed. A flavour rotation is performed on the coefficients to go in the chosen basis. 
 \begin{DoxyParams}{Parameters}
@@ -509,9 +521,9 @@ After the evolution, the C\+KM matrix is computed. A flavour rotation is perform
 
 
 
-Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. At such scale, the C\+KM matrix is computed. 
+Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. Default low-\/energy input is used. 
 
-The initial conditions are generated at the scale {\ttfamily mu} starting from the values at $\mu = 173.65 $ GeV in table \doxytablelink{classRGESolver_SMInput}{S\+M\+Input}. 
+The initial conditions are generated at the scale {\ttfamily mu} starting from the values at $\mu = 173.65 $ GeV in table \doxytablelink{classRGESolver_SMInput}{S\+M\+Input}. At the scale {\ttfamily mu} the C\+KM matrix is computed. 
 \begin{DoxyParams}{Parameters}
 {\em mu} & Scale (in GeV) at which the initial conditions are generated \\
 \hline
@@ -528,9 +540,9 @@ The initial conditions are generated at the scale {\ttfamily mu} starting from t
 
 
 
-Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. 
+Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. User-\/defined low energy input is used. 
 
-The initial conditions are generated at the scale {\ttfamily mu\+Fin} starting from the inserted parameters at the scale {\ttfamily mu\+In}. This method should be used with usual fermion hierarchy (smallest mass for the 1st generation and greatest mass for the 3rd withoud mass degeneracy for all up and down quarks and for charged leptons). The generation of the initial conditions is performed only if all the masses are non-\/negative and if $ \sin \theta_{ij} \in (0,1) $, $\delta \in (\pi,\pi]$. 
+The initial conditions are generated at the scale {\ttfamily mu\+Fin} starting from the inserted parameters at the scale {\ttfamily mu\+In}. This method should be used with usual fermion hierarchy (smallest mass for the 1st generation and greatest mass for the 3rd withoud mass degeneracy for all up and down quarks and for charged leptons). The generation of the initial conditions is performed only if all the masses are non-\/negative and if $ \sin \theta_{ij} \in (0,1) $, $\delta \in (\pi,\pi]$. We follow \href{http://www.utfit.org/UTfit}{\texttt{ http\+://www.\+utfit.\+org/\+U\+Tfit}} for what concerns the conventions for the C\+KM matrix. At the scale {\ttfamily mu} the C\+KM matrix is computed. 
 \begin{DoxyParams}{Parameters}
 {\em mu\+In} & Low-\/energy input scale (in GeV) \\
 \hline
