--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -103,7 +103,7 @@ G\+NU General Public License
 \hypertarget{classRGESolver_SM}{}
 \tabulinesep=1mm
 \begin{longtabu}spread 0pt [c]{*{2}{|X[-1]}|}
-\caption{Standard Model parameters. The labels in the left column must be used with the Get\+Coefficient method, the ones in the right column must be used with Get\+C\+K\+M\+Angle methods. }\label{classRGESolver_SM}\\
+\caption{Standard Model parameters. The labels in the left column must be used with the Get\+Coefficient/\+Set\+Coefficient methods, the ones in the right column must be used with Get\+C\+K\+M\+Angle methods. }\label{classRGESolver_SM}\\
 \hline
 {\begin{tabularx}{\linewidth}{|*{2}{>{\raggedright\arraybackslash}X|}}\hline
 \cellcolor{\tableheadbgcolor}\textbf{ Parameter }&\cellcolor{\tableheadbgcolor}\textbf{ Name ~\newline
