Approximate method relabelled

--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -85,7 +85,7 @@ A class that performs renormalization group evolution in the context of the S\+M
 The class solves the Renormalization Group Equations (R\+G\+Es) numerically, but provides also a faster, approximate solution that neglects the scale dependence of the anomalous dimension matrix. Only operators up to dimension six that preserve lepton and baryon numbers are considered. The operator basis is the Warsaw basis, defined in \href{https://arxiv.org/abs/1008.4884}{\texttt{ https\+://arxiv.\+org/abs/1008.\+4884}}. {\ttfamily \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}}} splits real and imaginary part of each complex parameter. ~\newline
  ~\newline
  The numerical integration is performed with an adaptive step-\/size routine (the explicit embedded Runge-\/\+Kutta-\/\+Fehlberg method), using the tools in the G\+NU Scientific Library. See \href{https://www.gnu.org/software/gsl/doc/html/ode-initval.html}{\texttt{ https\+://www.\+gnu.\+org/software/gsl/doc/html/ode-\/initval.\+html}} for all the details. ~\newline
-The accuracy level of the numerical integration can be tuned selecting the parameters $\epsilon_{rel} and \epsilon_{abs}$ using the dedicated setter functions. ~\newline
+The accuracy level of the numerical integration can be tuned selecting the parameters $\epsilon_{rel}$ and $\epsilon_{abs}$ using the dedicated setter functions. ~\newline
  ~\newline
  All the S\+M\+E\+FT coefficients are set using the \mbox{\hyperlink{classRGESolver_adc2b8a9a10216ec5285569c8f24cbed2}{Set\+Coefficient}} methods and accessed with the \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient}} methods. There exist three different signatures for each method, depending on the number of flavour indices of the parameter (0,2,4). ~\newline
  These two routines must be used also for the SM parameters $g_1,g_2,g_3,\lambda,m_h^2,$ $\mathrm{Re}(\mathcal{Y}_u),\mathrm{Im}(\mathcal{Y}_u),$ $\mathrm{Re}(\mathcal{Y}_d),\mathrm{Im}(\mathcal{Y}_d),$ $\mathrm{Re}(\mathcal{Y}_e),\mathrm{Im}(\mathcal{Y}_e)$ (we follow \href{https://arxiv.org/abs/1308.2627}{\texttt{ https\+://arxiv.\+org/abs/1308.\+2627}} for what concerns the conventions in the Higgs\textquotesingle{} sector). ~\newline
