--- a/latex/index.tex
+++ b/latex/index.tex
@@ -1,6 +1,6 @@
 \label{index_md_README}%
 \Hypertarget{index_md_README}%
- A {\ttfamily C++} library to perform renormalization group evolution of S\+M\+E\+FT coefficients, both numerically and with the leading-\/log approximation. The general flavour case at dimension-\/six level is considered. Operators that violate lepton and/or baryon number conservation are not considered. The documentation for this library can be found \href{https://silvest.github.io/RGESolver/annotated.html}{\texttt{ here}}
+ A {\ttfamily C++} library to perform renormalization group evolution of S\+M\+E\+FT coefficients numerically. A faster, approximate solution that neglects the scale dependence of the anomalous dimension matrix is also available. The general flavour case at dimension-\/six level is considered. Operators that violate lepton and/or baryon number conservation are not considered. The documentation for this library can be found \href{https://silvest.github.io/RGESolver/annotated.html}{\texttt{ here}}
 
 {\ttfamily \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}}} is a free software under the copyright of the G\+NU General Public License.\hypertarget{index_autotoc_md1}{}\doxysection{Dependencies}\label{index_autotoc_md1}
 
