Approximate method relabelled

--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -82,7 +82,7 @@ void \mbox{\hyperlink{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}{Save\+Ou
 \doxysubsection{Detailed Description}
 A class that performs renormalization group evolution in the context of the S\+M\+E\+FT. 
 
-The class solves the Renormalization Group Equations (R\+G\+Es) numerically, but provides also a faster, approximate solution that neglects the scale dependence of the anomalous dimension matrix. Only operators up to dimension six that preserve lepton and baryon numbers are considered. The operator basis is the Warsaw basis, defined in \href{https://arxiv.org/abs/1008.4884}{\texttt{ https\+://arxiv.\+org/abs/1008.\+4884}}. {\ttfamily \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}}} splits real and imaginary part of each complex parameter. ~\newline
+The class solves the Renormalization Group Equations (R\+G\+Es) numerically. A faster, approximate solution that neglects the scale dependence of the anomalous dimension matrix is also available. Only operators up to dimension six that preserve lepton and baryon numbers are considered. The operator basis is the Warsaw basis, defined in \href{https://arxiv.org/abs/1008.4884}{\texttt{ https\+://arxiv.\+org/abs/1008.\+4884}}. {\ttfamily \mbox{\hyperlink{classRGESolver}{R\+G\+E\+Solver}}} splits real and imaginary part of each complex parameter. ~\newline
  ~\newline
  The numerical integration is performed with an adaptive step-\/size routine (the explicit embedded Runge-\/\+Kutta-\/\+Fehlberg method), using the tools in the G\+NU Scientific Library. See \href{https://www.gnu.org/software/gsl/doc/html/ode-initval.html}{\texttt{ https\+://www.\+gnu.\+org/software/gsl/doc/html/ode-\/initval.\+html}} for all the details. ~\newline
 The accuracy level of the numerical integration can be tuned selecting the parameters $\epsilon_{rel}$ and $\epsilon_{abs}$ using the dedicated setter functions. ~\newline
