Reset function fixed

--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -73,7 +73,7 @@ double \mbox{\hyperlink{classRGESolver_ab4da1b64edf881b585de6bcfd03a2ab5}{Get\+C
 \begin{DoxyCompactList}\small\item\em Getter function for 4F parameters (4 flavour indices). one of the inserted indices is outside the \mbox{[}0\+:2\mbox{]} range, an error message is printed and the value 0 is returned. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRGESolver_a98473c7d53e598bfef878106a3715948}\label{classRGESolver_a98473c7d53e598bfef878106a3715948}} 
 void \mbox{\hyperlink{classRGESolver_a98473c7d53e598bfef878106a3715948}{Reset}} ()
-\begin{DoxyCompactList}\small\item\em Resets all the S\+M\+E\+FT coefficients to 0 and the SM parameters to their default value. $\epsilon_{\textrm{abs}}$ and $\epsilon_{\textrm{rel}}$ are reset to their default value. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Resets all the S\+M\+E\+FT coefficients to 0 and the SM parameters to their default value. $\epsilon_{\textrm{abs}}$ and $\epsilon_{\textrm{rel}}$ are reset to their default value (in the UP basis). \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}{Save\+Output\+File}} (std\+::string filename, std\+::string format)
 \begin{DoxyCompactList}\small\item\em Saves the current values of parameters in a file. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \end{Indent}
