Fixed a bug in default SM low energy input

--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,4 +1,4 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{classRGESolver}{RGESolver}} \\*A class that performs renormalization group evolution in the context of the SMEFT }{\pageref{classRGESolver}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_r_g_e_solver}{RGESolver}} \\*A class that performs renormalization group evolution in the context of the SMEFT }{\pageref{class_r_g_e_solver}}{}
 \end{DoxyCompactList}
